--- a/temp-master/todo-handler/server/.env
+++ b/temp-master/todo-handler/server/.env
@@ -1,2 +1,2 @@
-MONGO_URL = mongodb+srv://deepak:<password>@cluster0.b6pao.mongodb.net/todo-bucket?retryWrites=true&w=majority
-MONGO_PASSWORD = deepak123
+MONGO_URL = mongodb+srv://neeru:neeru@cluster0-6qdoa.mongodb.net/bookList?retryWrites=true&w=majority
+PORT=5000
