--- a/temp-master/todo-handler/server/package.json
+++ b/temp-master/todo-handler/server/package.json
@@ -19,6 +19,7 @@
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "path": "^0.12.7",
     "validator": "^13.5.2"
   },
   "devDependencies": {
